logs/uncompyle.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spark_parser'...
Listing './lib/python3.5/site-packages/spark_parser-1.8.5.dist-info'...
Listing './lib/python3.5/site-packages/uncompyle-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/uncompyle6'...
Listing './lib/python3.5/site-packages/uncompyle6/bin'...
Compiling './lib/python3.5/site-packages/uncompyle6/bin/uncompile.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/bin/uncompile.py", line 86
    except getopt.GetoptError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uncompyle6/linenumbers.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/linenumbers.py", line 13
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uncompyle6/main.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/main.py", line 191
    print '\n# okay decompiling %s' % infile
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/uncompyle6/parser.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/parser.py", line 169
    print "%s%s" % (indent, instructions[i])
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uncompyle6/parsers'...
Listing './lib/python3.5/site-packages/uncompyle6/scanners'...
Listing './lib/python3.5/site-packages/uncompyle6/semantics'...
Compiling './lib/python3.5/site-packages/uncompyle6/semantics/make_function.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/semantics/make_function.py", line 100
    except ParserError, p:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uncompyle6/semantics/pysource.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/semantics/pysource.py", line 2521
    except python_parser.ParserError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/uncompyle6/verify.py'...
***   File "./lib/python3.5/site-packages/uncompyle6/verify.py", line 429
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uncompyle6-2.14.2.dist-info'...
Listing './lib/python3.5/site-packages/xdis'...
Listing './lib/python3.5/site-packages/xdis/dropbox'...
Listing './lib/python3.5/site-packages/xdis/opcodes'...
Listing './lib/python3.5/site-packages/xdis-3.6.4.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
